BUGFR-812: Fix for overlapping filters on table header on PF

--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -162,7 +162,7 @@
         }
 
         &.scroll-top > tr:first-child th {
-          top: 70px;
+          top: 105px !important;
           transition-property: top;
           transition-duration: 1s;
 
@@ -176,8 +176,20 @@
           transition-property: top;
           transition-duration: 1s;
 
+          @media only screen and(min-width: 1367px) {
+            top: 417px !important;
+          }
+
           @media only screen and(min-width: 1599px) {
             top: 410px !important;
+          }
+
+          @media only screen and(min-width: 1919px) {
+            top: 520px !important;
+          }
+
+          @media only screen and(min-width: 2559px) {
+            top: 635px !important;
           }
         }
       }
@@ -588,10 +600,6 @@ i.icon.filter::before {
           &.sticky-chart-active > tr:first-child th {
             top: 620px;
           }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 640px;
-          }
         }
       }
     }
@@ -615,10 +623,6 @@ i.icon.filter::before {
         thead.pf-header {
           &.sticky-chart-active > tr:first-child th {
             top: 502px;
-          }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 500px;
           }
         }
       }
@@ -644,10 +648,6 @@ i.icon.filter::before {
           &.sticky-chart-active > tr:first-child th {
             top: 487px;
           }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 529px;
-          }
         }
       }
     }
@@ -672,11 +672,6 @@ i.icon.filter::before {
           &.sticky-chart-active > tr:first-child th {
             top: 340px;
           }
-
-          // &.sticky-chart-active.scroll-top > tr:first-child th {
-          //   top: 384px;
-
-          // }
         }
       }
     }
@@ -700,10 +695,6 @@ i.icon.filter::before {
         thead.pf-header {
           &.sticky-chart-active > tr:first-child th {
             top: 340px;
-          }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 384px;
           }
         }
       }
@@ -733,10 +724,6 @@ i.icon.filter::before {
           &.sticky-chart-active > tr:first-child th {
             top: 380px;
           }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 415px;
-          }
         }
       }
     }
@@ -760,10 +747,6 @@ i.icon.filter::before {
         thead.pf-header {
           &.sticky-chart-active > tr:first-child th {
             top: 434px;
-          }
-
-          &.sticky-chart-active.scroll-top > tr:first-child th {
-            top: 483px;
           }
         }
       }
